# python-service

./: .env.example  .pre-commit-config.yml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py  plugins.py
app/api/: __init__.py
app/api/accounts/: controller.py  deps.py  guards.py  repositories.py  schemas.py
app/api/accounts/controllers/: __init__.py  access.py  user.py
app/api/channels/: controller.py  deps.py  repositories.py  schemas.py
app/broker/: deps.py  router.py  schemas.py
app/core/: config.py  plugins.py  settings.py
app/db/models/: __init__.py  channel.py  channel_subscribers.py  oauth_user.py  user.py
app/models/: __init__.py  account.py  user.py
app/utils/: password.py
tests/: conftest.py  ping.py
