[project]
name = "python-service"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "faststream[kafka]>=0.6.0",
    "litestar-granian>=0.14.2",
    "litestar[jwt,pydantic,sqlalchemy]>=2.18.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
    "uvicorn>=0.37.0",
]

[tool.ruff]
line-length = 130
exclude = ["migrations"]

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
    "B904",   # Allow raising exceptions without from e, for HTTPException
]
